--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'io.taskmonk'
-version '1.0-RELEASE'
+version '1.1'
 
 sourceCompatibility = 1.8
 
@@ -48,7 +48,7 @@ dependencies {
 
 group = "ai.taskmonk"
 archivesBaseName = "taskmonk-sdk"
-version = "1.0-RELEASE"
+version = "1.1"
 
 
 uploadArchives {
