--- a/build.gradle
+++ b/build.gradle
@@ -53,11 +53,13 @@ version = "1.1"
 
 uploadArchives {
     repositories {
+        
         mavenDeployer {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: findProperty('ossrhUsername'), password: findProperty('ossrhPassword'))
+            
             }
 
 //            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
